# TigerHacks2024

./: README.md  package-lock.json  pyproject.toml
backend/: db.sqlite3  package-lock.json  requirements.txt  server.py  vercel.json  vercel_handler.py
backend/jwt_authentication/: apps.py  serializers.py  urls.py  views.py
backend/nutrition_api/: models.py  serializers.py  urls.py  views.py
backend/nutrition_api/migrations/: 0001_initial.py
backend/project/: settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json
frontend/css/: index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/components/: About.tsx  AuthForm.tsx  Demo.tsx  FormInput.tsx  Hero.tsx  ImageUploader.tsx  NavBar.tsx  ResetButtons.tsx  SocialButtons.tsx
frontend/src/context/: AuthContext.tsx
